// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelController components 1 default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChannelControl
    channelControl={
      Object {
        "activeChannel": "__ALL__/__ALL__//__ALL__/__ALL__",
        "allChannels": Array [
          "__ALL__/__ALL__//__ALL__/__ALL__",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
        ],
        "changeTheChannel": [Function],
        "isChangingChannel": undefined,
      }
    }
    locale="en-US"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoHeight": false,
      "autoHeightMax": 200,
      "autoHeightMin": 0,
      "autoHide": false,
      "autoHideDuration": 200,
      "autoHideTimeout": 1000,
      "children": <div
        className="channel-controls-container"
      >
        <div />
        <div />
        <div
          aria-label="2"
          className="channel-control channel-control-subchannel"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <React.Fragment>
            <div
              className="channel-control-start"
            >
              2
            </div>
          </React.Fragment>
        </div>
        <div
          aria-label="3"
          className="channel-control channel-control-subchannel"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <React.Fragment>
            <div
              className="channel-control-start"
            >
              3
            </div>
          </React.Fragment>
        </div>
      </div>,
      "className": "channel-controls-container",
      "hideTracksWhenNotNeeded": false,
      "renderThumbHorizontal": [Function],
      "renderThumbVertical": [Function],
      "renderTrackHorizontal": [Function],
      "renderTrackVertical": [Function],
      "renderView": [Function],
      "style": Object {
        "height": 0,
        "width": 60,
      },
      "tagName": "div",
      "thumbMinSize": 30,
      "universal": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div />,
          <div />,
          <div
            aria-label="2"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                2
              </div>
            </React.Fragment>
          </div>,
          <div
            aria-label="3"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                3
              </div>
            </React.Fragment>
          </div>,
        ],
        "className": "channel-controls-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "noInfo",
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "noInfo",
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "nodeType": "host",
          "props": Object {
            "aria-label": "2",
            "children": <React.Fragment>
              <div
                className="channel-control-start"
              >
                2
              </div>
            </React.Fragment>,
            "className": "channel-control channel-control-subchannel",
            "onClick": [Function],
            "onKeyPress": [Function],
            "role": "button",
            "tabIndex": "0",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="channel-control-start"
              >
                2
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 2,
                "className": "channel-control-start",
              },
              "ref": null,
              "rendered": 2,
              "type": "div",
            },
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
          "nodeType": "host",
          "props": Object {
            "aria-label": "3",
            "children": <React.Fragment>
              <div
                className="channel-control-start"
              >
                3
              </div>
            </React.Fragment>,
            "className": "channel-control channel-control-subchannel",
            "onClick": [Function],
            "onKeyPress": [Function],
            "role": "button",
            "tabIndex": "0",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="channel-control-start"
              >
                3
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 3,
                "className": "channel-control-start",
              },
              "ref": null,
              "rendered": 3,
              "type": "div",
            },
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoHeight": false,
        "autoHeightMax": 200,
        "autoHeightMin": 0,
        "autoHide": false,
        "autoHideDuration": 200,
        "autoHideTimeout": 1000,
        "children": <div
          className="channel-controls-container"
        >
          <div />
          <div />
          <div
            aria-label="2"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                2
              </div>
            </React.Fragment>
          </div>
          <div
            aria-label="3"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                3
              </div>
            </React.Fragment>
          </div>
        </div>,
        "className": "channel-controls-container",
        "hideTracksWhenNotNeeded": false,
        "renderThumbHorizontal": [Function],
        "renderThumbVertical": [Function],
        "renderTrackHorizontal": [Function],
        "renderTrackVertical": [Function],
        "renderView": [Function],
        "style": Object {
          "height": 0,
          "width": 60,
        },
        "tagName": "div",
        "thumbMinSize": 30,
        "universal": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            <div />,
            <div
              aria-label="2"
              className="channel-control channel-control-subchannel"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  2
                </div>
              </React.Fragment>
            </div>,
            <div
              aria-label="3"
              className="channel-control channel-control-subchannel"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  3
                </div>
              </React.Fragment>
            </div>,
          ],
          "className": "channel-controls-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "noInfo",
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "noInfo",
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
            "nodeType": "host",
            "props": Object {
              "aria-label": "2",
              "children": <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  2
                </div>
              </React.Fragment>,
              "className": "channel-control channel-control-subchannel",
              "onClick": [Function],
              "onKeyPress": [Function],
              "role": "button",
              "tabIndex": "0",
            },
            "ref": [Function],
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <div
                  className="channel-control-start"
                >
                  2
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 2,
                  "className": "channel-control-start",
                },
                "ref": null,
                "rendered": 2,
                "type": "div",
              },
              "type": Symbol(react.fragment),
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
            "nodeType": "host",
            "props": Object {
              "aria-label": "3",
              "children": <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  3
                </div>
              </React.Fragment>,
              "className": "channel-control channel-control-subchannel",
              "onClick": [Function],
              "onKeyPress": [Function],
              "role": "button",
              "tabIndex": "0",
            },
            "ref": [Function],
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <div
                  className="channel-control-start"
                >
                  3
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 3,
                  "className": "channel-control-start",
                },
                "ref": null,
                "rendered": 3,
                "type": "div",
              },
              "type": Symbol(react.fragment),
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`ChannelController components 2 ChannelController components 2 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChannelControl
    channelControl={
      Object {
        "activeChannel": "default/guestbook-app//gbapp-ch/guestbook-app-latest///elasticsearch-es-replicationcontroller///persistent-volume-provisioning-glusterfs-heketi-secret-secret",
        "allChannels": Array [
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
        ],
        "changeTheChannel": [Function],
        "isChangingChannel": undefined,
      }
    }
    locale="en-US"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoHeight": false,
      "autoHeightMax": 200,
      "autoHeightMin": 0,
      "autoHide": false,
      "autoHideDuration": 200,
      "autoHideTimeout": 1000,
      "children": <div
        className="channel-controls-container"
      >
        <div />
        <div
          aria-label="1"
          className="channel-control channel-control-subchannel selected"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <React.Fragment>
            <div
              className="channel-control-start"
            >
              1
            </div>
          </React.Fragment>
        </div>
        <div
          aria-label="2"
          className="channel-control channel-control-subchannel"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <React.Fragment>
            <div
              className="channel-control-start"
            >
              2
            </div>
          </React.Fragment>
        </div>
        <div
          aria-label="3"
          className="channel-control channel-control-subchannel"
          onClick={[Function]}
          onKeyPress={[Function]}
          role="button"
          tabIndex="0"
        >
          <React.Fragment>
            <div
              className="channel-control-start"
            >
              3
            </div>
          </React.Fragment>
        </div>
      </div>,
      "className": "channel-controls-container",
      "hideTracksWhenNotNeeded": false,
      "renderThumbHorizontal": [Function],
      "renderThumbVertical": [Function],
      "renderTrackHorizontal": [Function],
      "renderTrackVertical": [Function],
      "renderView": [Function],
      "style": Object {
        "height": 0,
        "width": 60,
      },
      "tagName": "div",
      "thumbMinSize": 30,
      "universal": false,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div />,
          <div
            aria-label="1"
            className="channel-control channel-control-subchannel selected"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                1
              </div>
            </React.Fragment>
          </div>,
          <div
            aria-label="2"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                2
              </div>
            </React.Fragment>
          </div>,
          <div
            aria-label="3"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                3
              </div>
            </React.Fragment>
          </div>,
        ],
        "className": "channel-controls-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "noInfo",
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "nodeType": "host",
          "props": Object {
            "aria-label": "1",
            "children": <React.Fragment>
              <div
                className="channel-control-start"
              >
                1
              </div>
            </React.Fragment>,
            "className": "channel-control channel-control-subchannel selected",
            "onClick": [Function],
            "onKeyPress": [Function],
            "role": "button",
            "tabIndex": "0",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="channel-control-start"
              >
                1
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 1,
                "className": "channel-control-start",
              },
              "ref": null,
              "rendered": 1,
              "type": "div",
            },
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
          "nodeType": "host",
          "props": Object {
            "aria-label": "2",
            "children": <React.Fragment>
              <div
                className="channel-control-start"
              >
                2
              </div>
            </React.Fragment>,
            "className": "channel-control channel-control-subchannel",
            "onClick": [Function],
            "onKeyPress": [Function],
            "role": "button",
            "tabIndex": "0",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="channel-control-start"
              >
                2
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 2,
                "className": "channel-control-start",
              },
              "ref": null,
              "rendered": 2,
              "type": "div",
            },
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
          "nodeType": "host",
          "props": Object {
            "aria-label": "3",
            "children": <React.Fragment>
              <div
                className="channel-control-start"
              >
                3
              </div>
            </React.Fragment>,
            "className": "channel-control channel-control-subchannel",
            "onClick": [Function],
            "onKeyPress": [Function],
            "role": "button",
            "tabIndex": "0",
          },
          "ref": [Function],
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <div
                className="channel-control-start"
              >
                3
              </div>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": 3,
                "className": "channel-control-start",
              },
              "ref": null,
              "rendered": 3,
              "type": "div",
            },
            "type": Symbol(react.fragment),
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoHeight": false,
        "autoHeightMax": 200,
        "autoHeightMin": 0,
        "autoHide": false,
        "autoHideDuration": 200,
        "autoHideTimeout": 1000,
        "children": <div
          className="channel-controls-container"
        >
          <div />
          <div
            aria-label="1"
            className="channel-control channel-control-subchannel selected"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                1
              </div>
            </React.Fragment>
          </div>
          <div
            aria-label="2"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                2
              </div>
            </React.Fragment>
          </div>
          <div
            aria-label="3"
            className="channel-control channel-control-subchannel"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex="0"
          >
            <React.Fragment>
              <div
                className="channel-control-start"
              >
                3
              </div>
            </React.Fragment>
          </div>
        </div>,
        "className": "channel-controls-container",
        "hideTracksWhenNotNeeded": false,
        "renderThumbHorizontal": [Function],
        "renderThumbVertical": [Function],
        "renderTrackHorizontal": [Function],
        "renderTrackVertical": [Function],
        "renderView": [Function],
        "style": Object {
          "height": 0,
          "width": 60,
        },
        "tagName": "div",
        "thumbMinSize": 30,
        "universal": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div />,
            <div
              aria-label="1"
              className="channel-control channel-control-subchannel selected"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  1
                </div>
              </React.Fragment>
            </div>,
            <div
              aria-label="2"
              className="channel-control channel-control-subchannel"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  2
                </div>
              </React.Fragment>
            </div>,
            <div
              aria-label="3"
              className="channel-control channel-control-subchannel"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
            >
              <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  3
                </div>
              </React.Fragment>
            </div>,
          ],
          "className": "channel-controls-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "noInfo",
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
            "nodeType": "host",
            "props": Object {
              "aria-label": "1",
              "children": <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  1
                </div>
              </React.Fragment>,
              "className": "channel-control channel-control-subchannel selected",
              "onClick": [Function],
              "onKeyPress": [Function],
              "role": "button",
              "tabIndex": "0",
            },
            "ref": [Function],
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <div
                  className="channel-control-start"
                >
                  1
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 1,
                  "className": "channel-control-start",
                },
                "ref": null,
                "rendered": 1,
                "type": "div",
              },
              "type": Symbol(react.fragment),
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///cassandra-cassandra-service///mysql-wordpress-pd-wordpress-mysql-deployment",
            "nodeType": "host",
            "props": Object {
              "aria-label": "2",
              "children": <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  2
                </div>
              </React.Fragment>,
              "className": "channel-control channel-control-subchannel",
              "onClick": [Function],
              "onKeyPress": [Function],
              "role": "button",
              "tabIndex": "0",
            },
            "ref": [Function],
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <div
                  className="channel-control-start"
                >
                  2
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 2,
                  "className": "channel-control-start",
                },
                "ref": null,
                "rendered": 2,
                "type": "div",
              },
              "type": Symbol(react.fragment),
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "default/guestbook-app//gbapp-ch/guestbook-app-latest///mysql-wordpress-pd-wordpress-mysql-service///staging-elasticsearch-elasticsearch-serviceaccount",
            "nodeType": "host",
            "props": Object {
              "aria-label": "3",
              "children": <React.Fragment>
                <div
                  className="channel-control-start"
                >
                  3
                </div>
              </React.Fragment>,
              "className": "channel-control channel-control-subchannel",
              "onClick": [Function],
              "onKeyPress": [Function],
              "role": "button",
              "tabIndex": "0",
            },
            "ref": [Function],
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <div
                  className="channel-control-start"
                >
                  3
                </div>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": 3,
                  "className": "channel-control-start",
                },
                "ref": null,
                "rendered": 3,
                "type": "div",
              },
              "type": Symbol(react.fragment),
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
